--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Color Game Project</title>
-    <link rel="stylesheet" href="Project.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
     <h1>The Great 
@@ -30,6 +30,6 @@
         <div class="square"></div>
     </div>
 
-    <script src="Project.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
 </body>
 </html>
